--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
+    "play-sound": "^1.1.3",
     "tmi.js": "^1.5.0"
   }
 }
